<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cyoutrip.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/cy_edittext"
            android:hint="@string/phone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/cy_edittext"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:hint="@string/pwd"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/cy_button"
            android:text="@string/login"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:descendantFocusability="blocksDescendants"
            android:paddingTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_id"/>
            <TextView
                android:id="@+id/reg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/text_selector"
                android:text="@string/reg_cy"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
